--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "path-finder",
-  "homepage": "https://github.com/PabloPicas0/Path-Finder",
+  "homepage": "https://PabloPicas0.github.io/Path-Finder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
